# classcorpus

./: .gitignore  .stignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SKILL.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
agents/: openai.yaml
benchmarks/: README.md  __init__.py  efficiency.py  generate.py  manifest.json  run.py
docs/: architecture.md  privacy.md
examples/: README.md
references/: citation-rules.md  cli.md  flashcard-formats.md  parser-plugins.md  record-schema.md  study-workflows.md
scripts/: _common.py  _embeddings.py  build_embeddings.py  convert_flashcards.py  index_lectures.py  outline_lectures.py  read_lectures.py  read_record.py  remove_course.py  render_flashcards.py  render_study_guide.py  retrieve_focused.py  review_powerpoint.py  run_ocr.py  search_lectures.py  store_visual_description.py  vision_queue.py
src/classcorpus/: __init__.py  __main__.py  citations.py  cli.py  database.py  diagnostics.py  embeddings.py  encoders.py  flashcard_html.py  flashcards.py  (+16 more)
tests/: test_benchmarks.py  test_cli.py  test_database.py  test_efficiency_benchmark.py  test_embeddings.py  test_encoders.py  test_flashcard_html.py  test_flashcards.py  test_indexer.py  test_math_notation.py  test_ocr.py  test_outline.py  test_parser_plugins.py  test_parsers.py  test_paths.py  test_payloads.py  test_record_text.py  test_records.py  test_removal.py  test_retrieval.py  test_review.py  test_scripts.py  test_search.py  test_skill.py  test_status.py  test_vision.py
(+13 files in other folders)
