[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "classcorpus"
version = "0.3.0"
description = "Search local lecture folders with exact citations"
readme = "SKILL.md"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24,<2",
    "python-pptx>=1.0,<2",
    "platformdirs>=4,<5",
]

[project.scripts]
classcorpus = "classcorpus.cli:main"

[project.optional-dependencies]
dev = [
    "PyYAML>=6,<7",
    "pytest>=8,<10",
    "ruff>=0.5,<1",
]
embeddings = [
    "numpy>=2,<3",
    "sentence-transformers>=3,<4",
]
fastembed = [
    "fastembed>=0.4,<1",
]
ocr = [
    "pytesseract>=0.3,<1",
]
pdf = [
    "matplotlib>=3.9,<4",
    "Pillow>=10,<14",
    "reportlab>=4,<5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:builtin type (SwigPyPacked|SwigPyObject|swigvarlink) has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
